--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,8 @@
 @import 'global/*.scss';
 @import '**/_*.scss';
 @import '../components/**/*.scss';
+@import url(https://fonts.googleapis.com/css?family=Golos+Text:regular);
+
+body {
+    font-family: 'Golos-UI';
+}
