--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,1 +1,11 @@
-<header class="header"></header>
+<header class="header">
+    <div class="header__container">
+        @@include('../bem-blocks/header/header-logo/_logo.html')
+        <button class="header__plusButton">
+            <svg class="plus" "24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13 5.0015C13 4.44921 12.5523 4.0015 12 4.0015C11.4477 4.0015 11 4.44921 11 5.0015V11.0015H5C4.44772 11.0015 4 11.4492 4 12.0015C4 12.5538 4.44772 13.0015 5 13.0015H11V19.0015C11 19.5538 11.4477 20.0015 12 20.0015C12.5523 20.0015 13 19.5538 13 19.0015V13.0015H19C19.5523 13.0015 20 12.5538 20 12.0015C20 11.4492 19.5523 11.0015 19 11.0015H13V5.0015Z" fill="white"/>
+            </svg>
+        </button>
+        @@include('../bem-blocks/header/header-menu/_menu.html')
+    </div>
+</header>
