--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -1,3 +1,4 @@
+
 *,
 *::before,
 *::after {
@@ -46,6 +47,12 @@ html,
 body {
 	min-height: 100%;
 	position: relative;
+	background: var(--grad-sec-001, linear-gradient(180deg, #EFF3F6 0%, #DFE3E9 100%));
+	font-size: 16px
+}
+
+button {
+	@include no-btn;
 }
 
 body {
