--- a/src/components/bem-blocks/header/header-menu/_menu.html
+++ b/src/components/bem-blocks/header/header-menu/_menu.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<nav class="menu">
     <ul class="menu__list">
         <li class="menu__item"> 
             <a href="/" >Рабочий стол</a>
@@ -35,4 +35,4 @@
             </a>
         </li>
     </ul>
-</div>
+</nav>
