--- a/src/scss/global/_svg.scss
+++ b/src/scss/global/_svg.scss
@@ -7,6 +7,15 @@
 .--svg__arrow-after::after {
     content:'';
 }
+.--svg__book-icon,.--svg__book-icon-before::before,.--svg__book-icon-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.017 4.35a2.333 2.333 0 011.65-.683h17v18.057a.997.997 0 00-.334-.057H8.667c-.834 0-1.642.24-2.334.681V6c0-.619.246-1.212.684-1.65zM6.333 26a2.333 2.333 0 002.334 2.333H24.39a1 1 0 01-.058-.334v-4a1 1 0 01.057-.332H8.667A2.333 2.333 0 006.333 26zm-2 0a4.333 4.333 0 004.334 4.333h18a1 1 0 00.707-1.706l-1.04-1.042v-3.172l1.04-1.04a1 1 0 00.293-.708V2.667a1 1 0 00-1-1h-18A4.333 4.333 0 004.333 6v20z' fill='%23fff'/%3E%3C/svg%3E");
+}
+.--svg__book-icon-before::before {
+    content:'';
+}
+.--svg__book-icon-after::after {
+    content:'';
+}
 .--svg__buttonarrows,.--svg__buttonarrows-before::before,.--svg__buttonarrows-after::after{
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='20' height='21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.5 1.502a1 1 0 100 2h2.586L10.96 7.628a1 1 0 101.414 1.414L16.5 4.916v2.586a1 1 0 102 0v-5a1 1 0 00-1-1h-5zM9.04 12.376a1 1 0 10-1.414-1.414L3.5 15.088v-2.586a1 1 0 10-2 0v5a1 1 0 001 1h5a1 1 0 100-2H4.914l4.126-4.126z' fill='%23516173'/%3E%3C/svg%3E");
 }
@@ -50,6 +59,15 @@
     content:'';
 }
 .--svg__circle-after::after {
+    content:'';
+}
+.--svg__clock-icon,.--svg__clock-icon-before::before,.--svg__clock-icon-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.55 3.665c-.27 0-.55.237-.55.608 0 .244.105.464.632.714.505.24 1.144.378 1.816.523l.21.046c.218.047.448.046.672-.005l.308-.07c.644-.143 1.246-.278 1.732-.507.53-.25.63-.466.63-.701 0-.37-.28-.608-.55-.608h-4.9zM11 4.273c0-1.405 1.107-2.608 2.55-2.608h4.9c1.443 0 2.55 1.203 2.55 2.608 0 1.36-.93 2.112-1.777 2.51a7.208 7.208 0 01-1.126.404c2.04.37 3.894 1.27 5.416 2.552l2.53-2.524-1.172-1.178a1 1 0 111.417-1.41l1.877 1.885 1.877 1.886a1 1 0 11-1.417 1.41l-1.171-1.175-2.527 2.52a11.62 11.62 0 012.74 7.512c0 6.444-5.224 11.667-11.667 11.667S4.333 25.109 4.333 18.665c0-5.717 4.112-10.473 9.54-11.473a6.986 6.986 0 01-1.1-.398C11.925 6.39 11 5.63 11 4.273zM6.333 18.665C6.333 13.327 10.661 9 16 9a9.667 9.667 0 110 19.333c-5.339 0-9.667-4.328-9.667-9.667zM16 14.332a4.333 4.333 0 013.09 7.372 1 1 0 101.425 1.403A6.333 6.333 0 0016 12.332v2z' fill='%23fff'/%3E%3C/svg%3E");
+}
+.--svg__clock-icon-before::before {
+    content:'';
+}
+.--svg__clock-icon-after::after {
     content:'';
 }
 .--svg__cloud,.--svg__cloud-before::before,.--svg__cloud-after::after{
@@ -178,6 +196,33 @@
 .--svg__morehorizontal-after::after {
     content:'';
 }
+.--svg__my-deals,.--svg__my-deals-before::before,.--svg__my-deals-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.667 1.667A3.667 3.667 0 003 5.333v21.334a3.666 3.666 0 003.667 3.666H20a1 1 0 100-2H6.667A1.667 1.667 0 015 26.667V5.333a1.667 1.667 0 011.667-1.666h16c.92 0 1.666.746 1.666 1.666v.471a3.667 3.667 0 00-2.666 3.528v14.222a1 1 0 00.142.515l2.667 4.444a1 1 0 001.715 0l2.667-4.444a1 1 0 00.142-.515V9.332a3.667 3.667 0 00-2.667-3.528v-.47a3.667 3.667 0 00-3.666-3.667h-16zm18.626 5.999a1.004 1.004 0 00.08 0A1.666 1.666 0 0127 9.332v13.945l-1.667 2.778-1.666-2.778V9.332a1.667 1.667 0 011.626-1.666zm-16.96 11a1 1 0 011-1h8a1 1 0 110 2h-8a1 1 0 01-1-1zm1-6.334a1 1 0 100 2H12a1 1 0 100-2H9.333zm-1-4.333a1 1 0 011-1h8a1 1 0 110 2h-8a1 1 0 01-1-1zm1 15.001a1 1 0 100 2h5.334a1 1 0 000-2H9.333z' fill='%23fff'/%3E%3C/svg%3E");
+}
+.--svg__my-deals-before::before {
+    content:'';
+}
+.--svg__my-deals-after::after {
+    content:'';
+}
+.--svg__new-message,.--svg__new-message-before::before,.--svg__new-message-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M21.243 4.42c-1.276-.521-2.706-.758-4.5-.753-4.425.011-7.764 2.107-9.862 5.5a11.593 11.593 0 00-1.733 6.093v.002a11.414 11.414 0 001.226 5.176 1 1 0 01.056.767l-2.182 6.547 6.547-2.182a1 1 0 01.767.056c1.615.815 3.086 1.225 5.179 1.226 1.284 0 2.269-.112 3.186-.373.917-.261 1.814-.684 2.906-1.36s1.871-1.29 2.514-1.993c.643-.704 1.184-1.536 1.759-2.685.941-1.88 1.223-3.078 1.227-5.184.004-1.794-.233-3.224-.753-4.5-.52-1.275-1.35-2.458-2.614-3.723C23.7 5.77 22.518 4.94 21.243 4.42zm.756-1.852c1.582.646 2.98 1.651 4.38 3.052 1.402 1.4 2.407 2.8 3.052 4.381.646 1.582.906 3.285.902 5.26-.005 2.413-.358 3.916-1.439 6.075-.627 1.255-1.264 2.257-2.07 3.139-.806.882-1.746 1.607-2.939 2.345-1.193.737-2.262 1.256-3.41 1.583-1.15.327-2.331.45-3.735.449-2.261 0-3.96-.43-5.701-1.255l-8.056 2.685a1 1 0 01-1.265-1.265l2.686-8.058a13.414 13.414 0 01-1.256-5.701A13.593 13.593 0 015.18 8.115c2.442-3.948 6.405-6.435 11.558-6.448 1.976-.005 3.68.255 5.26.9z' fill='%23fff'/%3E%3C/svg%3E");
+}
+.--svg__new-message-before::before {
+    content:'';
+}
+.--svg__new-message-after::after {
+    content:'';
+}
+.--svg__new-notification,.--svg__new-notification-before::before,.--svg__new-notification-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 1.667a9 9 0 00-9 9c0 4.519-.967 7.351-1.878 9.02-.457.838-.905 1.394-1.223 1.73a4.354 4.354 0 01-.451.415l-.012.01.001-.002.004-.002.002-.002.003.003L4 23.666h24l.553-1.829.003-.003.001.001.002.002.003.002.002.001-.012-.009a4.357 4.357 0 01-.451-.416c-.318-.335-.767-.89-1.223-1.728-.911-1.67-1.878-4.502-1.878-9.021a9 9 0 00-9-9zm9.747 20H6.253c.205-.298.415-.638.625-1.022C7.967 18.65 9 15.481 9 10.667a7 7 0 1114 0c0 4.814 1.033 7.982 2.122 9.978.21.384.42.724.625 1.022zm-11.189 5.831a1 1 0 10-1.73 1.004 3.668 3.668 0 006.344 0 1 1 0 00-1.73-1.004 1.667 1.667 0 01-2.884 0z' fill='%23fff'/%3E%3C/svg%3E");
+}
+.--svg__new-notification-before::before {
+    content:'';
+}
+.--svg__new-notification-after::after {
+    content:'';
+}
 .--svg__paperpencil,.--svg__paperpencil-before::before,.--svg__paperpencil-after::after{
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.667 1.667A3.667 3.667 0 003 5.333v21.334a3.666 3.666 0 003.667 3.666H20a1 1 0 100-2H6.667A1.667 1.667 0 015 26.667V5.333a1.667 1.667 0 011.667-1.666h16c.92 0 1.666.746 1.666 1.666v.471a3.667 3.667 0 00-2.666 3.528v14.222a1 1 0 00.142.515l2.667 4.444a1 1 0 001.715 0l2.667-4.444a1 1 0 00.142-.515V9.332a3.667 3.667 0 00-2.667-3.528v-.47a3.667 3.667 0 00-3.666-3.667h-16zm18.626 5.999a1.004 1.004 0 00.08 0A1.666 1.666 0 0127 9.332v13.945l-1.667 2.778-1.666-2.778V9.332a1.667 1.667 0 011.626-1.666zm-16.96 11a1 1 0 011-1h8a1 1 0 110 2h-8a1 1 0 01-1-1zm1-6.334a1 1 0 100 2H12a1 1 0 100-2H9.333zm-1-4.333a1 1 0 011-1h8a1 1 0 110 2h-8a1 1 0 01-1-1zm1 15.001a1 1 0 100 2h5.334a1 1 0 100-2H9.333z' fill='%233A9EFF'/%3E%3C/svg%3E");
 }
@@ -223,6 +268,24 @@
 .--svg__refresh-after::after {
     content:'';
 }
+.--svg__reload-button,.--svg__reload-button-before::before,.--svg__reload-button-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='20' height='22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M18.163 13.356a8.5 8.5 0 00-5.33-10.375 1 1 0 10-.667 1.886 6.5 6.5 0 012.405 10.747l-1.904 2.027v-2.475a1 1 0 10-2 0v5a1 1 0 001 1h5a1 1 0 000-2h-2.689l2.04-2.171a8.5 8.5 0 002.145-3.639zm-9.83-5.523a1 1 0 001-1v-5a1 1 0 00-1.004-1H3.333a1 1 0 000 2H6.02l-2.038 2.17a8.5 8.5 0 003.184 14.014 1 1 0 00.668-1.886A6.5 6.5 0 015.429 6.384l1.904-2.028v2.477a1 1 0 001 1z' fill='%23516173'/%3E%3C/svg%3E");
+}
+.--svg__reload-button-before::before {
+    content:'';
+}
+.--svg__reload-button-after::after {
+    content:'';
+}
+.--svg__settings-icon-sidebar,.--svg__settings-icon-sidebar-before::before,.--svg__settings-icon-sidebar-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='32' height='32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 12c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm0-2c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM16 18c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm0-2c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM26 10c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm0-2c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM5 30v-8c0-.6.4-1 1-1s1 .4 1 1v8c0 .6-.4 1-1 1s-1-.4-1-1zM15 13V3c0-.6.4-1 1-1s1 .4 1 1v10c0 .6-.4 1-1 1s-1-.4-1-1zM25 29V19c0-.6.4-1 1-1s1 .4 1 1v10c0 .6-.4 1-1 1s-1-.4-1-1zM25 5V3c0-.6.4-1 1-1s1 .4 1 1v2c0 .6-.4 1-1 1s-1-.4-1-1zM5 7V3c0-.6.4-1 1-1s1 .4 1 1v4c0 .6-.4 1-1 1s-1-.4-1-1zM15 29v-2c0-.6.4-1 1-1s1 .4 1 1v2c0 .6-.4 1-1 1s-1-.4-1-1z' fill='%23fff'/%3E%3C/svg%3E");
+}
+.--svg__settings-icon-sidebar-before::before {
+    content:'';
+}
+.--svg__settings-icon-sidebar-after::after {
+    content:'';
+}
 .--svg__settings,.--svg__settings-before::before,.--svg__settings-after::after{
     background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='18' height='18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M11.294 2.503c-.549-2.45-4.04-2.45-4.588 0l.975.219-.975-.219-.03.134a.351.351 0 01-.531.22l-.536.844.536-.844-.116-.074C3.909 1.44 1.44 3.908 2.784 6.028l.074.116.753-.478-.753.478a.351.351 0 01-.22.53l-.134.03c-2.45.55-2.45 4.04 0 4.59l.134.03.213-.951-.213.95c.237.054.35.326.22.532l-.074.115C1.44 14.09 3.91 16.56 6.03 15.215l-.497-.784.497.784.116-.073a.351.351 0 01.53.22l.03.133.951-.212-.95.213c.548 2.449 4.04 2.449 4.588 0l.03-.134-.976-.219.976.219a.351.351 0 01.531-.22l.116.073c2.12 1.344 4.589-1.124 3.245-3.245l-.074-.115-.756.479.756-.48a.351.351 0 01.22-.53l.134-.03-.219-.976.22.976c2.449-.55 2.449-4.04 0-4.59l-.135-.03a.351.351 0 01-.22-.53l.074-.116-.845-.535.845.535c1.344-2.12-1.125-4.588-3.245-3.245l-.116.074.374.59-.374-.59a.351.351 0 01-.53-.22l-.03-.134-.976.219.975-.219zm-2.637.437c.027-.119.077-.174.12-.207A.376.376 0 019 2.666c.092 0 .17.028.222.067.044.033.094.088.12.207l.03.134a2.351 2.351 0 003.554 1.472l.116-.073c.103-.066.178-.07.232-.062.064.01.14.045.204.11.065.065.1.14.11.205.008.053.004.128-.061.231l-.074.116.823.522-.823-.522a2.351 2.351 0 001.472 3.554l.134.03c.119.026.175.077.207.12.039.052.067.13.067.222s-.028.17-.067.223c-.032.043-.088.093-.207.12l-.134.03.186.832-.186-.832a2.351 2.351 0 00-1.472 3.553l.074.116.844-.535-.844.535c.065.103.069.178.06.232a.376.376 0 01-.109.205.376.376 0 01-.204.11c-.054.007-.13.003-.232-.062l-.116-.073a2.351 2.351 0 00-3.553 1.471l-.03.134.976.219-.976-.219c-.027.12-.077.175-.12.207a.376.376 0 01-.223.068.376.376 0 01-.222-.068c-.044-.032-.094-.088-.12-.207l-.03-.134a2.351 2.351 0 00-3.554-1.471l-.116.073c-.103.065-.178.07-.232.061a.376.376 0 01-.204-.11.376.376 0 01-.11-.204c-.008-.054-.004-.129.061-.232l.074-.116a2.351 2.351 0 00-1.472-3.553l-.134-.03c-.119-.027-.175-.077-.207-.12a.376.376 0 01-.067-.223c0-.092.028-.17.067-.222.032-.043.088-.094.207-.12l.134-.03a2.351 2.351 0 001.472-3.554l-.074-.116c-.065-.103-.069-.178-.061-.231a.376.376 0 01.11-.205c.065-.065.14-.1.204-.11.054-.008.13-.004.232.062l.535-.845-.535.845.116.073a2.351 2.351 0 003.553-1.472l.03-.134zM8 9a1 1 0 112 0 1 1 0 01-2 0zm1-3a3 3 0 100 6 3 3 0 000-6z' fill='%237F8FA4'/%3E%3C/svg%3E");
 }
@@ -230,6 +293,15 @@
     content:'';
 }
 .--svg__settings-after::after {
+    content:'';
+}
+.--svg__stretch-button,.--svg__stretch-button-before::before,.--svg__stretch-button-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='20' height='21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.5 1.502a1 1 0 100 2h2.586L10.96 7.628a1 1 0 101.414 1.414L16.5 4.916v2.586a1 1 0 102 0v-5a1 1 0 00-1-1h-5zM9.04 12.376a1 1 0 10-1.414-1.414L3.5 15.088v-2.586a1 1 0 10-2 0v5a1 1 0 001 1h5a1 1 0 100-2H4.914l4.126-4.126z' fill='%23516173'/%3E%3C/svg%3E");
+}
+.--svg__stretch-button-before::before {
+    content:'';
+}
+.--svg__stretch-button-after::after {
     content:'';
 }
 .--svg__telegram,.--svg__telegram-before::before,.--svg__telegram-after::after{
@@ -275,6 +347,15 @@
     content:'';
 }
 .--svg__whiteplus-after::after {
+    content:'';
+}
+.--svg__yellow-question,.--svg__yellow-question-before::before,.--svg__yellow-question-after::after{
+    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg width='36' height='36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='36' height='36' rx='18' fill='%23FFB300'/%3E%3Cg filter='url(%23filter0_d_1560_41431)'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M18 9.833a8.167 8.167 0 100 16.333 8.167 8.167 0 000-16.333zM7.833 17.999c0-5.615 4.552-10.166 10.167-10.166s10.167 4.551 10.167 10.166S23.615 28.166 18 28.166 7.833 23.614 7.833 17.999zm10.478-3.966c-1.215-.212-2.312.45-2.704 1.533a1 1 0 11-1.88-.681c.724-2 2.762-3.2 4.928-2.822.983.172 1.918.572 2.61 1.312.706.753 1.068 1.76 1.068 2.96 0 1.656-1.261 2.75-2.171 3.338a9.125 9.125 0 01-1.894.926l-.038.013-.012.004-.004.001h-.002c-.001.001-.001.001-.31-.95l.309.951a1 1 0 01-.618-1.902h.001l.298.918-.297-.919.02-.007.088-.031a7.132 7.132 0 001.371-.682c.806-.522 1.26-1.094 1.26-1.66 0-.781-.227-1.271-.528-1.593-.315-.336-.805-.588-1.495-.709zM18 22a1 1 0 000 2h.008a1 1 0 100-2H18z' fill='%23fff'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_d_1560_41431' x='7.833' y='7.833' width='20.333' height='21.333' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='1'/%3E%3CfeColorMatrix values='0 0 0 0 0.109804 0 0 0 0 0.109804 0 0 0 0 0.109804 0 0 0 0.1 0'/%3E%3CfeBlend in2='BackgroundImageFix' result='effect1_dropShadow_1560_41431'/%3E%3CfeBlend in='SourceGraphic' in2='effect1_dropShadow_1560_41431' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E");
+}
+.--svg__yellow-question-before::before {
+    content:'';
+}
+.--svg__yellow-question-after::after {
     content:'';
 }
 .--svg__youtube,.--svg__youtube-before::before,.--svg__youtube-after::after{
