global-menu, more-menu, my-work

--- a/src/components/bem-blocks/work-with-tasks/_work-with-tasks.html
+++ b/src/components/bem-blocks/work-with-tasks/_work-with-tasks.html
@@ -1,12 +1,12 @@
 <div class="work-tasks">
     <div class="work-tasks__container">
-        @@include("../bem-blocks/widget/_widget.html", {
+        @@include("../widget/_widget.html", {
             "title": "Распределение задач",
             "info-name": "Задачи",
             "chart": "chart__donut",
             "color": "blue"
         })
-        @@include("../bem-blocks/widget/_widget.html", {
+        @@include("../widget/_widget.html", {
             "title": "Воронка сделок",
             "info-name": "Сделки",
             "chart": "chart__funnel",
