--- a/src/components/bem-blocks/header/header-menu/_menu.html
+++ b/src/components/bem-blocks/header/header-menu/_menu.html
@@ -18,8 +18,7 @@
         <li class="menu__item">
             <a href="">Компании</a>
         </li>
-        <li class="menu__item">
-            <a href="">
+        <li class="menu__item" id="button-more-menu">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1441_22699)">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -32,7 +31,6 @@
                         </clipPath>
                     </defs>
                 </svg>
-            </a>
         </li>
     </ul>
 </nav>
