--- a/src/components/bem-blocks/header/header-menu/_menu.scss
+++ b/src/components/bem-blocks/header/header-menu/_menu.scss
@@ -10,6 +10,7 @@
         align-items: center;
     }
     &__item {
+        cursor: pointer;
         display: inline-block;
         list-style-type: none;
         font-size: 16px;
