--- a/src/components/bem-blocks/global-menu/_global-menu.html
+++ b/src/components/bem-blocks/global-menu/_global-menu.html
@@ -59,7 +59,7 @@
                 </svg>
             </div>
         </li>
-        <li class="global-menu__item global-menu__item--last">
+        <li class="global-menu__item global-menu__item--last"  id="button-question">
             <div class="global-menu__icon --svg__yellow-question"></div>
         </li>
     </ul>
