--- a/src/components/bem-blocks/subheader/_subheader.html
+++ b/src/components/bem-blocks/subheader/_subheader.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="subheader__2ndPart">
-            <button class="subheader__dots">
+            <button class="subheader__dots" id="dots-button">
                 <svg 
                 width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1441_22699)">
@@ -42,7 +42,7 @@
                 </svg>
                     
             </button>
-            <button class="subheader__addBtn">
+            <button class="subheader__addBtn" id="add-task-button">
                 Добавить
             </button>
         </div>
