--- a/src/components/bem-blocks/widget/_widget.html
+++ b/src/components/bem-blocks/widget/_widget.html
@@ -6,11 +6,11 @@
             <div class="header-chart__info info">
                 <span class="info__name">@@info-name</span>
                 <span class="line">/</span>
-                <span class="info__interval">Неделя</span>
+                <span class="info__interval" id="interval-button">Неделя</span>
                 <span class="info__time-interval">08.01.22 - 15.01.22</span>
             </div>
         </div>
-        <button class="header__dots-button">
+        <button class="header__dots-button" id="widget-dots-button">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_1441_22699)">
                     <path fill-rule="evenodd" clip-rule="evenodd"
